@@ -1,0 +1,1 @@
+{"web":{"client_id":"144394141628-c5nd278fh7o4goo687ii3ogltmi4evpn.apps.googleusercontent.com","auth_uri":"https://accounts.google.com/o/oauth2/auth","token_uri":"https://accounts.google.com/o/oauth2/token","auth_provider_x509_cert_url":"https://www.googleapis.com/oauth2/v1/certs","client_secret":"YWWvzhTRBEYeGD3XFereAV0e","redirect_uris":["https://artemklevtsov.shinyapps.io/ga-realtime"]}}
